--- a/_posts/2019-09-01-秋招 剑指offer刷题.md
+++ b/_posts/2019-09-01-秋招 剑指offer刷题.md
@@ -1,6 +1,6 @@
 ---
-`layout:     post
-title:      秋招 剑指offer刷题
+layout:     post
+title:      剑指offer刷题
 subtitle:  
 date:       2019-09-01
 author:     
@@ -11,7 +11,7 @@ tags:
 typora-root-url: ..
 ---
 
-## 秋招 剑指offer刷题（分类）
+## 剑指offer刷题（分类）
 
 第一题 :
 
