--- a/_posts/2019-09-01-工作 模板字面量.md
+++ b/_posts/2019-09-01-工作 模板字面量.md
@@ -11,7 +11,7 @@ tags:
 typora-root-url: ..
 ---
 
-## 工作 模板字面量
+##  模板字面量
 
 1.在模板字面量（反引号）之内的所有空白符都是字符串的一部分，因此需要**特别留意缩进**。　　　
 2.在模板字面量中**使用 \n 来指示换行**的插入位置。
