--- a/_posts/2019-09-01-工作 防抖节流.md
+++ b/_posts/2019-09-01-工作 防抖节流.md
@@ -11,7 +11,7 @@ tags:
 typora-root-url: ..
 ---
 
-## 工作 防抖节流
+##  防抖节流
 
 防抖、节流` https://segmentfault.com/a/1190000016261602 `这个写的很好，平时键盘抬起就会搜索，防抖后，间隔一段时间不输入才会搜索，节流后，可以做到不管是否停止打字，间隔一段时间都会搜索。
 
