旅游移动端
旅游移动端

--- a/_posts/2019-09-01-工作 防抖节流.md
+++ b/_posts/2019-09-01-工作 防抖节流.md
@@ -60,7 +60,7 @@ inputb.addEventListener('keyup', function (e) {
 })
 ```
 
-**函数节流**：规定在一个单位时间内，只能触发一次函数。**如果这个单位时间内触发多次函数，只有一次生效。**
+**函数节流**：规定在一个单位时间内，只能触发一次函数。**如果这个单位时间内触发多次函数，只有一次生效。**【性能优化】
 
 ```javascript
 let biu = function () {
