--- a/_posts/2019-09-03-旅游移动端.md
+++ b/_posts/2019-09-03-旅游移动端.md
@@ -1,13 +1,13 @@
 ---
 layout:     post
-title:      微信小程序（量寻）
+title:     旅游移动端
 subtitle:  
-date:       2019-08-31
+date:       2019-09-03
 author:     
 header-img: 
 catalog: true
 tags:
-    - < 微信小程序的学习 >
+    - < 旅游项目 >
 typora-root-url: ..旅游y（量寻）
 ---
 
