拆分面试题内容
拆分面试题内容

--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -17,7 +17,7 @@ typora-root-url: ..
 
 1. `setTimeout`的回调函数会**在遍历结束后执行**；
 
-2. 箭头函数中的**this指向定义时**当前周围的作用域；
+2. 
 
 3. static静态方法被设为只能被创建他们的构造器使用，并且不能传递给实例；
 
@@ -31,7 +31,7 @@ typora-root-url: ..
 
 6. **使用new**后函数中**this指向新创建的对象**；不使用new，函数中this指向全局对象；
 
-7. 如果使用标记模板字面量，第一个参数的值总是字符串的数组。其余的参数获取的是传递的表达式的值；
+7. 
 
 8. 在**测试相等性**时，基本类型通过它们的值进行比较；对象通过它们的引用进行比较（判断是否具有**对内存中相同位置的引用**）；
 
@@ -71,14 +71,8 @@ typora-root-url: ..
     3. 使用**apply、call、bind**
     4. new**实例化一个对象**；
 
-20. **css3有哪些新特性**？
-    1. 实现圆角`border-radius`、阴影`box-shadow`、`border-image`；
-    2. 对文字加特效`text-shadow`、线性渐变`gradient`、旋转`transform`；
-    3. `transform`：旋转`rotate（9deg）`、缩放`scale（0.85,0.9）`、定位`translate（0px，-30px）`、倾斜`skew（-9deg、0deg）`；
-    4. 增加了更多的css选择器、多背景、rgba
-    5. 在css3中引入为一个的伪类：：selection
-    6. 媒体查询、多栏布局
-
+20. 
+    
 21. `stopPropagation()`**阻止事件冒泡**，但不会阻止定义在元素上的其他事件；
 
     `stopImmediatePropagation()`**彻底阻止事件**，在其之后绑定在元素上的其他监听事件都不会触发；
@@ -103,6 +97,8 @@ typora-root-url: ..
 
 跨域，指的是浏览器不能执行其他网站的脚本。浏览器执行`javascript`脚本时，会检查这个脚本属于哪个页面，如果不是同源页面，就不会被执行。
 
+![img](/img/assets_2019/1620)
+
 解决办法：
 
 ①**JSONP**：注意JSONP只支持GET请求，不支持POST请求。
@@ -120,171 +116,8 @@ header('Access-Control-Allow-Method:POST,GET');//允许访问的方式
 
 
 
-### 2. h5新标签有哪些？为什么要加强语义化？
 
-新标签：
-
-**文档类型设定**：`<!doctype html>`；
-
-**字符设定**：`<meta charset="utf-8">`；
-
-**常用新标签**：
-
-​	`header`，一般作为网页的**头部**使用，可以多个；
-
-​	`footer`，底部，**不一定是文档最底部**，可以多个；
-
-​	 `aside`，**侧边**栏；
-
-​	 `nav`，**导航**栏；
-
-​	`article`，独立内容区域，与session类似，**用于文章blog、帖子、短文或者回复、评论**等；
-
-​	`section`，代表某一个区域/分区/页面/文档的**一部分区域**，有独立的内容，但结构相近，就可以用section，范围比div大，语义比div更强，可以包含header、`h1-h6`……凸显语义的标签；
-
-​	`datalist `，**标签定义选项列表**，请与 input 元素配合使用该元素；
-
-```html
-<input type="text" value="输入" list="TFboys"/> <!--  input里面用list -->
-<datalist id="TFboys">   <!-- datalist里面用id -->  
-        <option>易烊千玺</option>
-            <option>王俊凯</option>
-        <option>王源</option>
-</datalist>
-```
-
-​	`fieldset`，可**将表单内的相关元素分组**，打包legend（为`fieldset`元素定义标题）使用；
-
-```html
-	<fieldset>
-	<legend>用户登录</legend>
-    	用户名: <input type="text"><br />
-		密　码: <input type="password">
-    </fieldset>
-```
-
-​	 `address`，**标签定义文档或文章的作者/拥有者的联系信息**，字体样式默认倾斜；
-​    ​`time`，时间标签，主要用于搜索引擎和其它一些内容引擎特殊的解析和展示；
-​    `hgroup`，专门用来包含标题**h标签的分组**；
-
-​	`detail`，*细节、详情* ，open属性：默认展开，summary相当于详情的标题；
-
-
-
-​	**新增了许多input type属性**：`email`、`tel`、`url`、`number`、`search搜索框，加强语义`、`range自由拖动滑块`、`time`、`date日期`、`datetime时间`、`month`、`week`
 ​    
-
-​	**新增了许多input的属性**：`placeholder占位符，默认文字`、`autofocus页面加载时自动获得焦点`、`multiple多文件上传`、`autocomplete`、`required必填项`、`accesskey规定激活元素的快捷键`
-​    
-
-​	**多媒体标签**：`embed定义嵌入的内容`、`audio播放音频`、`video播放视频`；
-
-​	`src导入`，`autoplay自动播放`、`controls是否默认显示播放件`、`loop循环播放`
-
-​	......
-
-​    原因：1.默认样式不一样 ；2.有SEO优化作用；
-​    
-
-### 3.为什么要清除浮动？怎么清除浮动？
-
-**产生原因**：子盒子浮动导致的父盒子内高度为 0 ，父级盒子不能被撑开，发生**高度塌陷**的情况。
-
-
-
-**带来的负作用**：
-
-1. **背景**不能显示
-2. **边框**不能撑开
-3. **margin和padding值**不能正确显示
-
-
-
-**清除浮动的方法**：
-
-1. 给**父盒子**设置合适的**高度**；
-2. 给**父盒子添加样式 `overflow:hidden/auto;`**（这个属性相当于触发BFC，让父级紧贴内容，包括使用了浮动的盒子）（为了去除兼容性问题，会添加`zoom:1;`）
-3. 在父盒子里面的子盒子后面**添加一个子盒子**，如div，**添加样式 `.clear{ clear:both; }`；**
-4. 采用**伪元素，给父元素追加`:after`**，给父元素添加一个类`.clearfix{content:"";clear:both;}`
-
-
-
-**BFC块级格式化上下文的特征**：
-
-- 内部的Box会在**垂直方向**，从顶部开始**一个接一个**地放置；
-
-- Box垂直方向的距离由margin决定。属于同一个BFC的两个**相邻Box的margin会发生叠加**。
-
-- 每个元素的margin box的左边， **与包含块**border box的**左边相接触**，即使存在浮动也是如此。
-
-- BFC的区域不会与float box叠加。
-
-- BFC就是页面上的一个**隔离的独立容器**，容器里面的子元素**不会影响到外面的元素**，反之亦然。
-
-- 计算BFC的高度时，**浮动元素也参与计算**。
-
-  
-
-**创建块级格式化上下文**：
-
-- **浮动** (元素的 float不为 none）
-
-- **绝对定位元素** (元素的 position为 absolute 或 fixed)
-
-- **行内块** inline-blocks (元素的 display: inline-block)
-
-- **表格单元格** (元素的 display: table-cell，HTML表格单元格默认属性)
-
-- **表格标题** (元素的 display: table-caption，HTML表格标题默认属性)
-
-- **overflow的值不为 visible的元素**(元素的 overflow: hidden，overflow: auto)
-
-- **弹性盒**子 flex boxes (元素的 display: flex 或 inline-flex)
-
-  
-
-### 4.行内元素、块元素有哪些？它们有什么不同？
-
-行内元素：b、span、a、u、em、i、img、input、select、label、textarea、button
-
-块级元素：div、h、ol、ul、dl、li、table、td、th、tr、dd、dt、p、caption
-
-- 行内元素的特点：
-
-  1、行内元素**只能容纳文本或者其他行内元素**。
-
-  2、**宽度只与内容有关**。
-
-  3、和其他元素都**在一行上**。
-
-  4、高，行高及外边距和内边距**左右可改变**。
-
-- 块级元素的特点：
-
-  1、高度，行高以及外边距和内边距**都可控制**。
-
-  2、总是在新行上开始，**占据一整行**。
-
-  3、它可以**容纳内联元素和其他块元素**。
-
-  4、**宽度**始终是与浏览器宽度一样，**与内容无关**。
-
-- 区别：
-
-  1、**行内元素**会在**一条直线上分列**，都是统一行的，程度偏向分列。
-
-  ​	  **块级元素各盘踞一行**，垂直偏向分列；块级元素重新行开端停止接着一个断行。
-
-  2、**行内元素**不可以包括块级元素，只能包容文本或许其余行内元素。
-
-  ​	  **块级元素**能够包括行内元素和块级元素，还能够包容内联元素和其余元素；。
-
-  3、行内元素与块级元素属性的分歧，主要在盒模子属性上。
-
-  **行内元素**设置width无效，height无效（**能够设置line-height**），margin、padding设置上下有效。
-
-- 行内元素内嵌块级元素。高度被子元素撑大，而**宽度和父级一致**（父级是body就是body的宽度）。
-- **行内块元素**内嵌块级元素。宽高都会**被子元素撑大**的。
 
 ### 5. 有哪几种存储方式？有什么不同？
 
@@ -831,17 +664,9 @@ Point === Point.prototype.constructor // true，类本身就指向构造函数
 
 ```javascript
 class Point {
-  constructor() {
-    // ...
-  }
-
-  toString() {
-    // ...
-  }
-
-  toValue() {
-    // ...
-  }
+  constructor() {    // ...  }
+  toString() {    // ...  }
+  toValue() {    // ...  }
 }
 
 // 等同于
@@ -853,7 +678,6 @@ Point.prototype = {
 };
 
 //Object.assign方法可以很方便地一次向类添加多个方法
-
 Object.assign(Point.prototype, {
   toString(){},
   toValue(){}
@@ -1707,7 +1531,53 @@ Position有四个属性值，分别是static 、fixed、 relative 、absolute；
 
 ### 13.给DOM元素绑定事件有哪几种方法？
 
+1. 使用内联；2.使用`.onclick`的方式；3.使用事件监听`addEventListener`的方式；
 
+#### 1、2两种方式都是存在一个**弊端**的，就是一个元素只能添加一个事件。
+
+```html
+<!--1.内联-->
+<input type="button" value="btn" onclick="alert('内联');">
+```
+
+​	这种方式就是在一个元素上面直接绑定了一个点击`onclick`事件，此事件为DOM 0级标准。同时，这个事件的优先级是最高的。
+
+```html
+<!--2. .onclick的方式-->
+<input type="button" value="btn">
+
+<script>
+	var btn = document.getElementsBytagname("input")[0];
+	btn.onclick = function(){
+		alert('.onclick')
+	}
+</script>
+```
+
+使用这种形式也是可以给一个DOM元素添加上一个事件。这个也是DOM 0级标准。
+
+#### 给一个元素（DOM对象）添加两个甚至是多个事件
+
+```html
+<!--3.事件监听addEventListener-->
+<input type="button" value="按钮">
+
+<script>
+	var btn = document.getElementsBytagname("input")[0];
+	btn.addEventListener("click", function(){
+		alert(1)
+	})
+	btn.addEventListener("click", function(){
+		alert(2)
+	})
+</script>
+```
+
+使用`addEventListener`的方式还可以拥有第三个参数：
+
+1. 事件类型，**不需要**添加上`on`
+2. 事件函数
+3. 是否捕获（布尔值），默认是`false`，即不捕获，那就是冒泡。
 
 ### 14.数组常用的遍历方法有哪几种？（for...in一般用于对象）
 
